tests/compile_fail/invalid_font_feature_tag_literal.rs
use surgeist_style::FontFeatureTag;

fn main() {
    let _tag = FontFeatureTag(String::from("kern"));
}
